Added some data

--- a/index.html
+++ b/index.html
@@ -18,11 +18,45 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollTrigger/1.0.6/ScrollTrigger.min.js"
         integrity="sha512-+LXqbM6YLduaaxq6kNcjMsQgZQUTdZp7FTaArWYFt1nxyFKlQSMdIF/WQ/VgsReERwRD8w/9H9cahFx25UDd+g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="script.js"></script>
+    <script src="script.js" async defer></script>
 </head>
 
 <body>
-    <script src="" async defer></script>
+    <section class="hero">
+        <h1>
+            Digital <br />
+            Evolution
+        </h1>
+        <h2>Transform your brand identity</h2>
+        <p>Experience the next generation of digital product design. We craft immersive experiences that blend
+            innovation with functionality, helping brands stand out in the digital landscape.</p>
+    </section>
+    <section class="info">
+        <div class="tags">
+            <p>Brand Strategy</p>
+            <p>User Experience</p>
+            <p>Digital Products</p>
+            <p>Innovation Lab</p>
+            <h2>We believe in creating digital products that not only look exceptional but drive real business growth
+                and user engagement through thoughtful design and strategic innovation.</h2>
+            <p>
+                Our approach combines cutting-edge technology with human-centered design principles. We transform
+                complex challenges into seamless digital experiences that resonate with your audience and elevate your
+                brand in the digital space.
+            </p>
+        </div>
+    </section>
+    <section class="scanner">
+        <div class="scan-info">
+            <div class="product-id">
+                <h2>#98734</h2>
+                <div class="product-description">
+                    <p>Transform</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="outro"></section>
 </body>
 
 </html>
