--- a/index.html
+++ b/index.html
@@ -51,12 +51,21 @@
             <div class="product-id">
                 <h2>#98734</h2>
                 <div class="product-description">
-                    <p>Transform</p>
+                    <p>Transform your digitally identity</p>
+
                 </div>
+            </div>
+            <div class="scan-contaier"></div>
+            <div class="barcode"><img src="./assets/barcode.png" alt=""></div>
+            <div class="purchased">
+                <p>Innovation Verified</p>
             </div>
         </div>
     </section>
-    <section class="outro"></section>
+    <section class="outro">
+        <h2>Join the revolution where innovative experience meets strategic thinking. Let's create products that don't
+            just exist in digital space - they define it.</h2>
+    </section>
 </body>
 
 </html>
